# portfolio_Catolica

./: CMakeLists.txt  CRUD_fingerprint.ino.ino  CheckNFC.ino  Main.ino  Main_Menu.ino  README.txt
.github/workflows/: sonar-scan.yaml
Main/: Main.ino
Main/Arduino Uno/: NFC_Uno.ino
Main/Arduino Uno/NFC_Uno/: NFC_Uno.ino
Main/Main/: Main.cpp  Main.ino
Main/NFC_Uno/: NFC_Uno.cpp
Main_Menu/: Main_Menu.ino
libs/Adafruit_BusIO/: Adafruit_BusIO_Register.h  Adafruit_I2CDevice.h  Adafruit_I2CRegister.h  Adafruit_SPIDevice.h
libs/Adafruit_Fingerprint_Sensor_Library/: Adafruit_Fingerprint.h
libs/Adafruit_GFX_Library/: Adafruit_GFX.h
libs/Adafruit_TFTLCD_Library/: Adafruit_TFTLCD.h
libs/MCUFRIEND_kbv/: MCUFRIEND_kbv.h
libs/NDEF/: Ndef.h  NdefRecord.h  NfcTag.h
libs/PN532/examples/emulate_tag_ndef/: emulate_tag_ndef.ino
libs/SD/: SD.h
libs/SD/src/: SD.h
libs/SD/src/utility/: Sd2Card.h  Sd2PinMap.h  SdFat.h  SdFatUtil.h
src/: Main.cpp
